feat(app): fix manifest path

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,10 @@
     <link rel="shortcut icon" href="./assets/images/favicon.ico" />
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet" />
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <link
+      rel="manifest"
+      href="https://ismaestro.github.io/angular-example-app/manifest.webmanifest"
+    />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
